Improved Stage logic, using ResponseDTO and FilterDTO